...
                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <buttonConfiguration key="configuration" style="filled" title="Currency" subtitle="Curreny">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                    <fontDescription key="subtitleFontDescription" type="system" pointSize="20"/>
...
                                <rect key="frame" x="16" y="233" width="343" height="50"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLn-82-jJP">
                                        <rect key="frame" x="0.0" y="0.0" width="36" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <color key="tintColor" systemColor="systemOrangeColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Log out">
                                    <backgroundConfiguration key="background" cornerRadius="20"/>
                                    <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="16" y="8" width="359" height="34.666666666666664"/>
                                        <attributedString key="attributedText">
                                            <fragment content="New Tag">
                                                <attributes>
                                                    <font key="NSFont" size="30" name="Helvetica-Bold"/>
...
                                        </variation>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yap-nH-Cfi">
                                        <rect key="frame" x="16" y="58.666666666666686" width="343" height="45"/>
                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="0.0" width="167.66666666666666" height="45"/>
                                            </colorWell>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label color" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNZ-GI-saV">
                                                <rect key="frame" x="175.66666666666663" y="0.0" width="167.33333333333337" height="45"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag icon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Xf-bx-pYR">
                                                <rect key="frame" x="171.66666666666663" y="0.0" width="171.33333333333337" height="45"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <color key="tintColor" red="0.0" green="0.37665109536082475" blue="0.038514938686770993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Save Tag">
                                            <backgroundConfiguration key="background" cornerRadius="16">
                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="User Settings" id="CPd-Fg-8Gx"/>
                    <connections>
                        <outlet property="colorLabel" destination="JNZ-GI-saV" id="swu-Jd-cAh"/>
...
